syntax = "proto3";

package scrapperpb;


option go_package="scrapperpb";

message TokenizationRequest {
  string KID = 1;
  string data = 2;
}

message TokenizationResponse {
  string KID = 1;
  string data = 2;
}


message EncryptionRequest {
  string KID = 1;
  string data = 2;
}

message EncryptionResponse {
  string KID = 1;
  string data = 2;
}


service EncryptionService {
  rpc Tokenize(TokenizationRequest) returns ( TokenizationResponse ) {};
  rpc DeTokenize(TokenizationRequest) returns ( TokenizationResponse ) {};
  rpc Encrypt(EncryptionRequest) returns (EncryptionResponse) {};
  rpc Decrypt(EncryptionRequest) returns (EncryptionResponse) {};

}

